# mnfcgi

./: COPYING  README.md  configure.ac  setup-env
port/: Makefile.in  distinfo  pkg-descr
src/: Makefile.am  diag.txt  mnfcgi.h  mnfcgi_app.c  mnfcgi_app.h  mnfcgi_app_private.h  mnfcgi_private.h  mnfcgi_proto.c  mnfcgi_util.c  mnfcgi_wire.c
test/: Makefile.am  do-it  gendata.c  runscripts  testbar.c  testfoo.c  testmy.c  testmy.h  testoauth.c  testoauth.h  testoauth_client.c  testoauth_da.c  testoauth_login.c  testoauth_token.c  testoauth_util.c
